--- a/2_modeling/2_1_customization.ipynb
+++ b/2_modeling/2_1_customization.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "id": "4c52041e",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "id": "9c4f3ba8",
    "metadata": {},
    "outputs": [],
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "id": "782ad747",
    "metadata": {},
    "outputs": [],
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "id": "8d0a3e99",
    "metadata": {},
    "outputs": [
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
    "id": "9775137f",
    "metadata": {},
    "outputs": [],
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 6,
    "id": "5fe03e6a",
    "metadata": {},
    "outputs": [
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 7,
    "id": "2c087b38",
    "metadata": {},
    "outputs": [
@@ -190,7 +190,7 @@
        " 'eval-TLP-Tavec-9_RCl_CP-PD': 'gaussian_kde'}"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 8,
    "id": "3be85921",
    "metadata": {},
    "outputs": [],
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 9,
    "id": "1832b218",
    "metadata": {},
    "outputs": [
@@ -220,25 +220,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'constraint_class': 'ScalarRange', 'table_name': 'TLP', 'constraint_parameters': {'column_name': 'clin-reservaCognitiva_escolaridad', 'low_value': 0, 'high_value': 5, 'strict_boundaries': False}}\n",
-      "{'constraint_class': 'ScalarRange', 'table_name': 'TLP', 'constraint_parameters': {'column_name': 'demo-edad', 'low_value': 18, 'high_value': 100, 'strict_boundaries': False}}\n",
-      "{'constraint_class': 'ScalarRange', 'table_name': 'TLP', 'constraint_parameters': {'column_name': 'demo-genero', 'low_value': 1, 'high_value': 2, 'strict_boundaries': False}}\n",
-      "{'constraint_class': 'ScalarRange', 'table_name': 'TLP', 'constraint_parameters': {'column_name': 'eval-TLP-CubCorsi-totalDirectos-PD', 'low_value': 0.0, 'high_value': 1.0, 'strict_boundaries': False}}\n",
-      "{'constraint_class': 'ScalarRange', 'table_name': 'TLP', 'constraint_parameters': {'column_name': 'eval-TLP-CubCorsi-totalinversos-PD', 'low_value': 0.0, 'high_value': 1.0, 'strict_boundaries': False}}\n",
-      "{'constraint_class': 'ScalarRange', 'table_name': 'TLP', 'constraint_parameters': {'column_name': 'eval-TLP-CubCorsi-total-PD', 'low_value': 0.0, 'high_value': 1.0, 'strict_boundaries': False}}\n",
-      "{'constraint_class': 'ScalarRange', 'table_name': 'TLP', 'constraint_parameters': {'column_name': 'eval-TLP-FigRey-Duracion-PD', 'low_value': 0.0, 'high_value': 1.0, 'strict_boundaries': False}}\n",
-      "{'constraint_class': 'ScalarRange', 'table_name': 'TLP', 'constraint_parameters': {'column_name': 'eval-TLP-FigRey-totalCopia-PD', 'low_value': 0.0, 'high_value': 1.0, 'strict_boundaries': False}}\n",
-      "{'constraint_class': 'ScalarRange', 'table_name': 'TLP', 'constraint_parameters': {'column_name': 'eval-TLP-FigRey-totalMemoria-PD', 'low_value': 0.0, 'high_value': 1.0, 'strict_boundaries': False}}\n",
-      "{'constraint_class': 'ScalarRange', 'table_name': 'TLP', 'constraint_parameters': {'column_name': 'eval-TLP-Stroop-palabras-PD', 'low_value': 0.0, 'high_value': 1.0, 'strict_boundaries': False}}\n",
-      "{'constraint_class': 'ScalarRange', 'table_name': 'TLP', 'constraint_parameters': {'column_name': 'eval-TLP-Stroop-color-PD', 'low_value': 0.0, 'high_value': 1.0, 'strict_boundaries': False}}\n",
-      "{'constraint_class': 'ScalarRange', 'table_name': 'TLP', 'constraint_parameters': {'column_name': 'eval-TLP-Stroop-palabrasColor-PD', 'low_value': 0.0, 'high_value': 1.0, 'strict_boundaries': False}}\n",
-      "{'constraint_class': 'ScalarRange', 'table_name': 'TLP', 'constraint_parameters': {'column_name': 'eval-TLP-Tavec-1_RI_A1-PD', 'low_value': 0.0, 'high_value': 1.0, 'strict_boundaries': False}}\n",
-      "{'constraint_class': 'ScalarRange', 'table_name': 'TLP', 'constraint_parameters': {'column_name': 'eval-TLP-Tavec-10_RL_LP-PD', 'low_value': 0.0, 'high_value': 1.0, 'strict_boundaries': False}}\n",
-      "{'constraint_class': 'ScalarRange', 'table_name': 'TLP', 'constraint_parameters': {'column_name': 'eval-TLP-Tavec-11_RCl_LP-PD', 'low_value': 0.0, 'high_value': 1.0, 'strict_boundaries': False}}\n",
-      "{'constraint_class': 'ScalarRange', 'table_name': 'TLP', 'constraint_parameters': {'column_name': 'eval-TLP-Tavec-2_RI_A5-PD', 'low_value': 0.0, 'high_value': 1.0, 'strict_boundaries': False}}\n",
-      "{'constraint_class': 'ScalarRange', 'table_name': 'TLP', 'constraint_parameters': {'column_name': 'eval-TLP-Tavec-3_RI_AT-PD', 'low_value': 0.0, 'high_value': 1.0, 'strict_boundaries': False}}\n",
-      "{'constraint_class': 'ScalarRange', 'table_name': 'TLP', 'constraint_parameters': {'column_name': 'eval-TLP-Tavec-8_RL_CP-PD', 'low_value': 0.0, 'high_value': 1.0, 'strict_boundaries': False}}\n",
-      "{'constraint_class': 'ScalarRange', 'table_name': 'TLP', 'constraint_parameters': {'column_name': 'eval-TLP-Tavec-9_RCl_CP-PD', 'low_value': 0.0, 'high_value': 1.0, 'strict_boundaries': False}}\n"
+      "{'constraint_class': 'ScalarRange', 'constraint_parameters': {'column_name': 'clin-reservaCognitiva_escolaridad', 'low_value': 0, 'high_value': 5, 'strict_boundaries': False}}\n",
+      "{'constraint_class': 'ScalarRange', 'constraint_parameters': {'column_name': 'demo-edad', 'low_value': 18, 'high_value': 100, 'strict_boundaries': False}}\n",
+      "{'constraint_class': 'ScalarRange', 'constraint_parameters': {'column_name': 'demo-genero', 'low_value': 1, 'high_value': 2, 'strict_boundaries': False}}\n",
+      "{'constraint_class': 'ScalarRange', 'constraint_parameters': {'column_name': 'eval-TLP-CubCorsi-totalDirectos-PD', 'low_value': 0.0, 'high_value': 1.0, 'strict_boundaries': False}}\n",
+      "{'constraint_class': 'ScalarRange', 'constraint_parameters': {'column_name': 'eval-TLP-CubCorsi-totalinversos-PD', 'low_value': 0.0, 'high_value': 1.0, 'strict_boundaries': False}}\n",
+      "{'constraint_class': 'ScalarRange', 'constraint_parameters': {'column_name': 'eval-TLP-CubCorsi-total-PD', 'low_value': 0.0, 'high_value': 1.0, 'strict_boundaries': False}}\n",
+      "{'constraint_class': 'ScalarRange', 'constraint_parameters': {'column_name': 'eval-TLP-FigRey-Duracion-PD', 'low_value': 0.0, 'high_value': 1.0, 'strict_boundaries': False}}\n",
+      "{'constraint_class': 'ScalarRange', 'constraint_parameters': {'column_name': 'eval-TLP-FigRey-totalCopia-PD', 'low_value': 0.0, 'high_value': 1.0, 'strict_boundaries': False}}\n",
+      "{'constraint_class': 'ScalarRange', 'constraint_parameters': {'column_name': 'eval-TLP-FigRey-totalMemoria-PD', 'low_value': 0.0, 'high_value': 1.0, 'strict_boundaries': False}}\n",
+      "{'constraint_class': 'ScalarRange', 'constraint_parameters': {'column_name': 'eval-TLP-Stroop-palabras-PD', 'low_value': 0.0, 'high_value': 1.0, 'strict_boundaries': False}}\n",
+      "{'constraint_class': 'ScalarRange', 'constraint_parameters': {'column_name': 'eval-TLP-Stroop-color-PD', 'low_value': 0.0, 'high_value': 1.0, 'strict_boundaries': False}}\n",
+      "{'constraint_class': 'ScalarRange', 'constraint_parameters': {'column_name': 'eval-TLP-Stroop-palabrasColor-PD', 'low_value': 0.0, 'high_value': 1.0, 'strict_boundaries': False}}\n",
+      "{'constraint_class': 'ScalarRange', 'constraint_parameters': {'column_name': 'eval-TLP-Tavec-1_RI_A1-PD', 'low_value': 0.0, 'high_value': 1.0, 'strict_boundaries': False}}\n",
+      "{'constraint_class': 'ScalarRange', 'constraint_parameters': {'column_name': 'eval-TLP-Tavec-10_RL_LP-PD', 'low_value': 0.0, 'high_value': 1.0, 'strict_boundaries': False}}\n",
+      "{'constraint_class': 'ScalarRange', 'constraint_parameters': {'column_name': 'eval-TLP-Tavec-11_RCl_LP-PD', 'low_value': 0.0, 'high_value': 1.0, 'strict_boundaries': False}}\n",
+      "{'constraint_class': 'ScalarRange', 'constraint_parameters': {'column_name': 'eval-TLP-Tavec-2_RI_A5-PD', 'low_value': 0.0, 'high_value': 1.0, 'strict_boundaries': False}}\n",
+      "{'constraint_class': 'ScalarRange', 'constraint_parameters': {'column_name': 'eval-TLP-Tavec-3_RI_AT-PD', 'low_value': 0.0, 'high_value': 1.0, 'strict_boundaries': False}}\n",
+      "{'constraint_class': 'ScalarRange', 'constraint_parameters': {'column_name': 'eval-TLP-Tavec-8_RL_CP-PD', 'low_value': 0.0, 'high_value': 1.0, 'strict_boundaries': False}}\n",
+      "{'constraint_class': 'ScalarRange', 'constraint_parameters': {'column_name': 'eval-TLP-Tavec-9_RCl_CP-PD', 'low_value': 0.0, 'high_value': 1.0, 'strict_boundaries': False}}\n"
      ]
     }
    ],
@@ -252,7 +252,6 @@
     "        # Para la edad, se establece un rango de 18 a 100 años\n",
     "        my_constraint = {\n",
     "            'constraint_class': 'ScalarRange',\n",
-    "            'table_name': 'TLP',\n",
     "            'constraint_parameters': {\n",
     "                'column_name': col,\n",
     "                'low_value': 18,\n",
@@ -265,7 +264,6 @@
     "        # Para la escolaridad, se establece un rango de 0 a 5\n",
     "        my_constraint = {\n",
     "            'constraint_class': 'ScalarRange',\n",
-    "            'table_name': 'TLP',\n",
     "            'constraint_parameters': {\n",
     "                'column_name': col,\n",
     "                'low_value': 0,\n",
@@ -278,7 +276,6 @@
     "        # Para el género, se establece un rango de 1 a 2\n",
     "        my_constraint = {\n",
     "            'constraint_class': 'ScalarRange',\n",
-    "            'table_name': 'TLP',\n",
     "            'constraint_parameters': {\n",
     "                'column_name': col,\n",
     "                'low_value': 1,\n",
@@ -292,7 +289,6 @@
     "        max_val = df[col].max()\n",
     "        my_constraint = {\n",
     "        'constraint_class': 'ScalarRange',\n",
-    "        'table_name': 'TLP',\n",
     "        'constraint_parameters': {\n",
     "            'column_name': col,\n",
     "            'low_value': min_val,\n",
@@ -309,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 10,
    "id": "2bee7656",
    "metadata": {},
    "outputs": [],
