--- a/3_data_quality/3_1_diagnostic.ipynb
+++ b/3_data_quality/3_1_diagnostic.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "id": "5b1b62c1",
    "metadata": {},
    "outputs": [],
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "id": "c785f8c7",
    "metadata": {},
    "outputs": [
@@ -27,10 +27,17 @@
       "Running diagnostic for set 0\n",
       "Generating report ...\n",
       "\n",
-      "(1/2) Evaluating Data Validity: |██████████| 20/20 [00:00<00:00, 1484.45it/s]|\n",
+      "(1/2) Evaluating Data Validity: |          | 0/20 [00:00<?, ?it/s]|"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1/2) Evaluating Data Validity: |██████████| 20/20 [00:00<00:00, 1395.08it/s]|\n",
       "Data Validity Score: 99.91%\n",
       "\n",
-      "(2/2) Evaluating Data Structure: |██████████| 1/1 [00:00<00:00, 333.52it/s]|\n",
+      "(2/2) Evaluating Data Structure: |██████████| 1/1 [00:00<00:00, 425.56it/s]|\n",
       "Data Structure Score: 100.0%\n",
       "\n",
       "Overall Score (Average): 99.96%\n",
@@ -38,10 +45,10 @@
       "Running diagnostic for set 1\n",
       "Generating report ...\n",
       "\n",
-      "(1/2) Evaluating Data Validity: |██████████| 20/20 [00:00<00:00, 974.09it/s]|\n",
+      "(1/2) Evaluating Data Validity: |██████████| 20/20 [00:00<00:00, 1958.99it/s]|\n",
       "Data Validity Score: 99.82%\n",
       "\n",
-      "(2/2) Evaluating Data Structure: |██████████| 1/1 [00:00<00:00, 1022.00it/s]|\n",
+      "(2/2) Evaluating Data Structure: |██████████| 1/1 [00:00<00:00, 992.73it/s]|\n",
       "Data Structure Score: 100.0%\n",
       "\n",
       "Overall Score (Average): 99.91%\n",
@@ -49,10 +56,10 @@
       "Running diagnostic for set 2\n",
       "Generating report ...\n",
       "\n",
-      "(1/2) Evaluating Data Validity: |██████████| 20/20 [00:00<?, ?it/s]|\n",
+      "(1/2) Evaluating Data Validity: |██████████| 20/20 [00:00<00:00, 1818.31it/s]|\n",
       "Data Validity Score: 99.89%\n",
       "\n",
-      "(2/2) Evaluating Data Structure: |██████████| 1/1 [00:00<00:00, 573.07it/s]|\n",
+      "(2/2) Evaluating Data Structure: |██████████| 1/1 [00:00<00:00, 371.74it/s]|\n",
       "Data Structure Score: 100.0%\n",
       "\n",
       "Overall Score (Average): 99.95%\n",
@@ -60,10 +67,10 @@
       "Running diagnostic for set 3\n",
       "Generating report ...\n",
       "\n",
-      "(1/2) Evaluating Data Validity: |██████████| 20/20 [00:00<00:00, 1860.66it/s]|\n",
+      "(1/2) Evaluating Data Validity: |██████████| 20/20 [00:00<00:00, 1992.45it/s]|\n",
       "Data Validity Score: 99.77%\n",
       "\n",
-      "(2/2) Evaluating Data Structure: |██████████| 1/1 [00:00<00:00, 421.83it/s]|\n",
+      "(2/2) Evaluating Data Structure: |██████████| 1/1 [00:00<00:00, 324.31it/s]|\n",
       "Data Structure Score: 100.0%\n",
       "\n",
       "Overall Score (Average): 99.88%\n",
@@ -71,10 +78,10 @@
       "Running diagnostic for set 4\n",
       "Generating report ...\n",
       "\n",
-      "(1/2) Evaluating Data Validity: |██████████| 20/20 [00:00<?, ?it/s]|\n",
+      "(1/2) Evaluating Data Validity: |██████████| 20/20 [00:00<00:00, 1999.38it/s]|\n",
       "Data Validity Score: 99.86%\n",
       "\n",
-      "(2/2) Evaluating Data Structure: |██████████| 1/1 [00:00<00:00, 66.16it/s]|\n",
+      "(2/2) Evaluating Data Structure: |██████████| 1/1 [00:00<00:00, 287.58it/s]|\n",
       "Data Structure Score: 100.0%\n",
       "\n",
       "Overall Score (Average): 99.93%\n",
@@ -82,10 +89,10 @@
       "Running diagnostic for set 5\n",
       "Generating report ...\n",
       "\n",
-      "(1/2) Evaluating Data Validity: |██████████| 20/20 [00:00<00:00, 2222.21it/s]|\n",
+      "(1/2) Evaluating Data Validity: |██████████| 20/20 [00:00<00:00, 1597.80it/s]|\n",
       "Data Validity Score: 99.79%\n",
       "\n",
-      "(2/2) Evaluating Data Structure: |██████████| 1/1 [00:00<00:00, 500.04it/s]|\n",
+      "(2/2) Evaluating Data Structure: |██████████| 1/1 [00:00<00:00, 333.15it/s]|\n",
       "Data Structure Score: 100.0%\n",
       "\n",
       "Overall Score (Average): 99.89%\n",
@@ -93,10 +100,10 @@
       "Running diagnostic for set 6\n",
       "Generating report ...\n",
       "\n",
-      "(1/2) Evaluating Data Validity: |██████████| 20/20 [00:00<00:00, 2001.77it/s]|\n",
+      "(1/2) Evaluating Data Validity: |██████████| 20/20 [00:00<00:00, 1819.10it/s]|\n",
       "Data Validity Score: 99.84%\n",
       "\n",
-      "(2/2) Evaluating Data Structure: |██████████| 1/1 [00:00<00:00, 375.33it/s]|\n",
+      "(2/2) Evaluating Data Structure: |██████████| 1/1 [00:00<00:00, 499.80it/s]|\n",
       "Data Structure Score: 100.0%\n",
       "\n",
       "Overall Score (Average): 99.92%\n",
@@ -104,10 +111,10 @@
       "Running diagnostic for set 7\n",
       "Generating report ...\n",
       "\n",
-      "(1/2) Evaluating Data Validity: |██████████| 20/20 [00:00<00:00, 5613.36it/s]|\n",
+      "(1/2) Evaluating Data Validity: |██████████| 20/20 [00:00<00:00, 1909.11it/s]|\n",
       "Data Validity Score: 99.82%\n",
       "\n",
-      "(2/2) Evaluating Data Structure: |██████████| 1/1 [00:00<?, ?it/s]|\n",
+      "(2/2) Evaluating Data Structure: |██████████| 1/1 [00:00<00:00, 419.68it/s]|\n",
       "Data Structure Score: 100.0%\n",
       "\n",
       "Overall Score (Average): 99.91%\n",
@@ -115,10 +122,10 @@
       "Running diagnostic for set 8\n",
       "Generating report ...\n",
       "\n",
-      "(1/2) Evaluating Data Validity: |██████████| 20/20 [00:00<00:00, 1992.59it/s]|\n",
+      "(1/2) Evaluating Data Validity: |██████████| 20/20 [00:00<00:00, 2800.50it/s]|\n",
       "Data Validity Score: 99.81%\n",
       "\n",
-      "(2/2) Evaluating Data Structure: |██████████| 1/1 [00:00<00:00, 590.91it/s]|\n",
+      "(2/2) Evaluating Data Structure: |██████████| 1/1 [00:00<00:00, 84.01it/s]|\n",
       "Data Structure Score: 100.0%\n",
       "\n",
       "Overall Score (Average): 99.9%\n",
@@ -126,10 +133,10 @@
       "Running diagnostic for set 9\n",
       "Generating report ...\n",
       "\n",
-      "(1/2) Evaluating Data Validity: |██████████| 20/20 [00:00<00:00, 1999.00it/s]|\n",
+      "(1/2) Evaluating Data Validity: |██████████| 20/20 [00:00<00:00, 3192.62it/s]|\n",
       "Data Validity Score: 99.79%\n",
       "\n",
-      "(2/2) Evaluating Data Structure: |██████████| 1/1 [00:00<00:00, 500.33it/s]|\n",
+      "(2/2) Evaluating Data Structure: |██████████| 1/1 [00:00<00:00, 631.20it/s]|\n",
       "Data Structure Score: 100.0%\n",
       "\n",
       "Overall Score (Average): 99.89%\n",
