--- a/3_data_quality/3_2_data_quality_v2.ipynb
+++ b/3_data_quality/3_2_data_quality_v2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "5b1b62c1",
    "metadata": {},
    "outputs": [],
@@ -18,10 +18,205 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "c785f8c7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Running diagnostic for set 0\n",
+      "Generating report ...\n",
+      "\n",
+      "(1/2) Evaluating Column Shapes: |██████████| 20/20 [00:00<00:00, 836.27it/s]|\n",
+      "Column Shapes Score: 84.57%\n",
+      "\n",
+      "(2/2) Evaluating Column Pair Trends: |██████████| 190/190 [00:00<00:00, 197.67it/s]|\n",
+      "Column Pair Trends Score: 92.09%\n",
+      "\n",
+      "Overall Score (Average): 88.33%\n",
+      "\n",
+      "             Property     Score\n",
+      "0       Column Shapes  0.845745\n",
+      "1  Column Pair Trends  0.920895\n",
+      "Running diagnostic for set 1\n",
+      "Generating report ...\n",
+      "\n",
+      "(1/2) Evaluating Column Shapes: |██████████| 20/20 [00:00<00:00, 850.37it/s]|\n",
+      "Column Shapes Score: 83.71%\n",
+      "\n",
+      "(2/2) Evaluating Column Pair Trends: |██████████| 190/190 [00:00<00:00, 225.47it/s]|\n",
+      "Column Pair Trends Score: 91.96%\n",
+      "\n",
+      "Overall Score (Average): 87.83%\n",
+      "\n",
+      "             Property     Score\n",
+      "0       Column Shapes  0.837057\n",
+      "1  Column Pair Trends  0.919601\n",
+      "Running diagnostic for set 2\n",
+      "Generating report ...\n",
+      "\n",
+      "(1/2) Evaluating Column Shapes: |██████████| 20/20 [00:00<00:00, 909.20it/s]|\n",
+      "Column Shapes Score: 84.15%\n",
+      "\n",
+      "(2/2) Evaluating Column Pair Trends: |██████████| 190/190 [00:00<00:00, 223.07it/s]|\n",
+      "Column Pair Trends Score: 92.01%\n",
+      "\n",
+      "Overall Score (Average): 88.08%\n",
+      "\n",
+      "             Property     Score\n",
+      "0       Column Shapes  0.841489\n",
+      "1  Column Pair Trends  0.920071\n",
+      "Running diagnostic for set 3\n",
+      "Generating report ...\n",
+      "\n",
+      "(1/2) Evaluating Column Shapes: |██████████| 20/20 [00:00<00:00, 813.74it/s]|\n",
+      "Column Shapes Score: 84.54%\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\jgala\\uned\\tfm\\synthetic-data\\.conda\\Lib\\site-packages\\scipy\\stats\\_axis_nan_policy.py:531: RuntimeWarning:\n",
+      "\n",
+      "ks_2samp: Exact calculation unsuccessful. Switching to method=asymp.\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(2/2) Evaluating Column Pair Trends: |██████████| 190/190 [00:00<00:00, 200.84it/s]|\n",
+      "Column Pair Trends Score: 92.32%\n",
+      "\n",
+      "Overall Score (Average): 88.43%\n",
+      "\n",
+      "             Property     Score\n",
+      "0       Column Shapes  0.845390\n",
+      "1  Column Pair Trends  0.923211\n",
+      "Running diagnostic for set 4\n",
+      "Generating report ...\n",
+      "\n",
+      "(1/2) Evaluating Column Shapes: |██████████| 20/20 [00:00<00:00, 907.88it/s]|\n",
+      "Column Shapes Score: 82.67%\n",
+      "\n",
+      "(2/2) Evaluating Column Pair Trends: |██████████| 190/190 [00:00<00:00, 203.29it/s]|\n",
+      "Column Pair Trends Score: 92.28%\n",
+      "\n",
+      "Overall Score (Average): 87.48%\n",
+      "\n",
+      "             Property     Score\n",
+      "0       Column Shapes  0.826678\n",
+      "1  Column Pair Trends  0.922844\n",
+      "Running diagnostic for set 5\n",
+      "Generating report ...\n",
+      "\n",
+      "(1/2) Evaluating Column Shapes: |██████████| 20/20 [00:00<00:00, 882.42it/s]|\n",
+      "Column Shapes Score: 82.24%\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\jgala\\uned\\tfm\\synthetic-data\\.conda\\Lib\\site-packages\\scipy\\stats\\_axis_nan_policy.py:531: RuntimeWarning:\n",
+      "\n",
+      "ks_2samp: Exact calculation unsuccessful. Switching to method=asymp.\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(2/2) Evaluating Column Pair Trends: |██████████| 190/190 [00:00<00:00, 210.74it/s]|\n",
+      "Column Pair Trends Score: 92.34%\n",
+      "\n",
+      "Overall Score (Average): 87.29%\n",
+      "\n",
+      "             Property     Score\n",
+      "0       Column Shapes  0.822438\n",
+      "1  Column Pair Trends  0.923434\n",
+      "Running diagnostic for set 6\n",
+      "Generating report ...\n",
+      "\n",
+      "(1/2) Evaluating Column Shapes: |██████████| 20/20 [00:00<00:00, 1003.81it/s]|\n",
+      "Column Shapes Score: 83.78%\n",
+      "\n",
+      "(2/2) Evaluating Column Pair Trends: |██████████| 190/190 [00:00<00:00, 200.98it/s]|\n",
+      "Column Pair Trends Score: 92.54%\n",
+      "\n",
+      "Overall Score (Average): 88.16%\n",
+      "\n",
+      "             Property     Score\n",
+      "0       Column Shapes  0.837809\n",
+      "1  Column Pair Trends  0.925374\n",
+      "Running diagnostic for set 7\n",
+      "Generating report ...\n",
+      "\n",
+      "(1/2) Evaluating Column Shapes: |██████████| 20/20 [00:00<00:00, 921.25it/s]|\n",
+      "Column Shapes Score: 82.88%\n",
+      "\n",
+      "(2/2) Evaluating Column Pair Trends: |██████████| 190/190 [00:00<00:00, 219.05it/s]|\n",
+      "Column Pair Trends Score: 92.46%\n",
+      "\n",
+      "Overall Score (Average): 87.67%\n",
+      "\n",
+      "             Property     Score\n",
+      "0       Column Shapes  0.828799\n",
+      "1  Column Pair Trends  0.924571\n",
+      "Running diagnostic for set 8\n",
+      "Generating report ...\n",
+      "\n",
+      "(1/2) Evaluating Column Shapes: |██████████| 20/20 [00:00<00:00, 944.31it/s]|\n",
+      "Column Shapes Score: 84.12%\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\jgala\\uned\\tfm\\synthetic-data\\.conda\\Lib\\site-packages\\scipy\\stats\\_axis_nan_policy.py:531: RuntimeWarning:\n",
+      "\n",
+      "ks_2samp: Exact calculation unsuccessful. Switching to method=asymp.\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(2/2) Evaluating Column Pair Trends: |██████████| 190/190 [00:00<00:00, 214.98it/s]|\n",
+      "Column Pair Trends Score: 92.35%\n",
+      "\n",
+      "Overall Score (Average): 88.24%\n",
+      "\n",
+      "             Property     Score\n",
+      "0       Column Shapes  0.841166\n",
+      "1  Column Pair Trends  0.923547\n",
+      "Running diagnostic for set 9\n",
+      "Generating report ...\n",
+      "\n",
+      "(1/2) Evaluating Column Shapes: |██████████| 20/20 [00:00<00:00, 1753.58it/s]|\n",
+      "Column Shapes Score: 83.75%\n",
+      "\n",
+      "(2/2) Evaluating Column Pair Trends: |██████████| 190/190 [00:00<00:00, 193.79it/s]|\n",
+      "Column Pair Trends Score: 92.24%\n",
+      "\n",
+      "Overall Score (Average): 87.99%\n",
+      "\n",
+      "             Property     Score\n",
+      "0       Column Shapes  0.837456\n",
+      "1  Column Pair Trends  0.922396\n"
+     ]
+    }
+   ],
    "source": [
     "metadata = Metadata.load_from_json(filepath='../2_modeling/gc_metadata.json')\n",
     "for i in range(0, 10):\n",
